Fix exercise-list scrolling bug

--- a/src/components/SlideDialog/styles/SlideDialog.scss
+++ b/src/components/SlideDialog/styles/SlideDialog.scss
@@ -14,7 +14,7 @@
   border-top-right-radius: 10px;
   border-top-left-radius: 10px;
   .MuiPaper-root {
-    background-color: transparent !important;
+    // background-color: transparent !important;
   }
 }
 
