--- a/src/components/ItemDetails/styles/ItemDetails.scss
+++ b/src/components/ItemDetails/styles/ItemDetails.scss
@@ -1,9 +1,10 @@
 .item-details {
   display: grid;
+  align-items: start;
 
   gap: 1.5rem;
   padding: 1rem;
-  height: 100%;
+  // height: 100%;
 
   .header {
     display: grid;
