--- a/src/components/SlideDialog/styles/SlideDialog.scss
+++ b/src/components/SlideDialog/styles/SlideDialog.scss
@@ -37,7 +37,8 @@
       height: 3px;
       background-color: $light-gray;
       border-radius: 12px;
-
+      box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px,
+        rgba(0, 0, 0, 0.24) 0px 1px 2px;
       left: 50%;
       transform: translateX(-50%);
       z-index: 1000;
