Add better timer styling, add better EditWorkout layout

--- a/src/assets/styles/basics/helpers.scss
+++ b/src/assets/styles/basics/helpers.scss
@@ -23,6 +23,11 @@ button {
   // height: calc(100vh - $header-margin - 120px);
   height: calc(100vh - 120px);
   overflow-y: auto;
+
+  &.has-timer {
+    padding-bottom: 70px;
+  }
+  padding-bottom: 70px;
 }
 
 .card {
