--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -70,6 +70,7 @@
 @import '../../components/DateRangeController/styles/DateRangeController.scss';
 @import '../../components/WorkoutSession/styles/WorkoutSession.scss';
 @import '../../components/CustomSwipeAction/styles/CustomSwipeAction.scss';
+@import '../../components/Timer/styles/Timer.scss';
 
 @import '../../components/LiftMate/MuscleGroupCard/styles/MuscleGroupCard.scss';
 @import '../../pages/LiftMate/EditWorkout/styles/EditWorkout.scss';
