--- a/src/components/SlideDialog/styles/SlideDialog.scss
+++ b/src/components/SlideDialog/styles/SlideDialog.scss
@@ -113,7 +113,7 @@
 .MuiDialog-container {
   &:has(.blue) {
     .MuiPaper-root {
-      background-color: $dark-gray-blue !important;
+      // background-color: $dark-gray-blue !important;
     }
   }
 }
