--- a/src/pages/LiftMate/EditWorkout/styles/EditWorkout.scss
+++ b/src/pages/LiftMate/EditWorkout/styles/EditWorkout.scss
@@ -1,20 +1,17 @@
 .edit-workout-container {
-  height: 100%;
-
   .edit-workout-stage {
     padding: 1em;
     padding-bottom: 3rem;
     display: grid;
 
+    overflow-y: auto;
     align-content: start;
-    height: 100%;
 
     &.name-exercises-stage {
       & > .divider {
         margin-bottom: 0.5rem;
       }
       .exercises-container {
-        overflow-y: auto;
       }
       .exercise-card-container {
         margin: 0.5rem 0;
@@ -89,11 +86,55 @@
   }
 
   .end-buttons-container {
+    position: fixed;
+    bottom: 20px;
+    left: 0;
+    right: 0;
+    padding: 1rem;
     margin-top: 1rem;
     display: flex;
     align-items: center;
     justify-content: center;
     gap: 1rem;
+    background: $white;
+    border-top: 1px solid $light-gray;
+    z-index: 1000;
+    box-shadow: 0 -2px 4px rgba(0, 0, 0, 0.1);
+
+    &.dark-mode {
+      background: $dark-gray;
+      border-top: 1px solid $white;
+      border-color: $dark-mode-border;
+
+      &.blue {
+        background: $dark-gray-blue;
+        border-color: $dark-mode-border;
+      }
+      &.red {
+        background: $dark-gray-red;
+        border-color: $dark-mode-border;
+      }
+      &.yellow {
+        background: $dark-gray-yellow;
+        border-color: $dark-mode-border;
+      }
+      &.green {
+        background: $dark-gray-green;
+        border-color: $dark-mode-border;
+      }
+      &.deepPurple {
+        background: $dark-gray-deep-purple;
+        border-color: $dark-mode-border;
+      }
+      &.purple {
+        background: $dark-gray-purple;
+        border-color: $dark-mode-border;
+      }
+      &.pink {
+        background: $dark-gray-pink;
+        border-color: $dark-mode-border;
+      }
+    }
   }
 
   .week-number-toggle {
