--- a/src/assets/styles/setup/variables.scss
+++ b/src/assets/styles/setup/variables.scss
@@ -131,35 +131,45 @@ $very-dark-gray: #1d1d1d;
 
 $dark-gray: #0b1415;
 $darker-gray: #112021;
+$darker-gray-light: #1a4d4d; // refined for better UX contrast
 $dark-mode-border: rgba(255, 255, 255, 0.12);
 
 // Dark Mode Background Colors
 // dark-gray variants: darker backgrounds (for main/body)
 // darker-gray variants: lighter backgrounds (for cards/surfaces)
+// darker-gray-*-light variants: refined lighter variants for better UX
 
 $dark-gray-blue: #0b0f17; // darker (main background) - total RGB: 49
 $darker-gray-blue: #11161f; // lighter (card background) - total RGB: 70
+$darker-gray-blue-light: #1f3a5a; // refined for better UX contrast
 
 $dark-gray-yellow: #12120b; // darker (main background) - total RGB: 41
 $darker-gray-yellow: #18180f; // lighter (card background) - total RGB: 63
+$darker-gray-yellow-light: #4a4a1f; // refined for better UX contrast
 
 $dark-gray-red: #120a0b; // darker (main background) - total RGB: 39
 $darker-gray-red: #1a1011; // lighter (card background) - total RGB: 59
+$darker-gray-red-light: #522a1f; // refined for better UX contrast
 
 $dark-gray-orange: #120e0a; // darker (main background) - total RGB: 42
 $darker-gray-orange: #19140f; // lighter (card background) - total RGB: 60
+$darker-gray-orange-light: #5a4022; // refined for better UX contrast
 
 $dark-gray-green: #09100d; // darker (main background) - total RGB: 40
 $darker-gray-green: #0f1815; // lighter (card background) - total RGB: 60
+$darker-gray-green-light: #225540; // refined for better UX contrast
 
 $dark-gray-deep-purple: #0c0a12; // darker (main background) - total RGB: 40
 $darker-gray-deep-purple: #13101a; // lighter (card background) - total RGB: 61
+$darker-gray-deep-purple-light: #483a66; // refined for better UX contrast
 
 $dark-gray-purple: #0f0a10; // darker (main background) - total RGB: 41
 $darker-gray-purple: #160f17; // lighter (card background) - total RGB: 54
+$darker-gray-purple-light: #46244d; // refined for better UX contrast
 
 $dark-gray-pink: #120a0e; // darker (main background) - total RGB: 42
 $darker-gray-pink: #190f15; // lighter (card background) - total RGB: 61
+$darker-gray-pink-light: #562b45; // refined for better UX contrast
 
 // Neutral (global)
 $menu-bg: #0f2a2c;
