--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -71,6 +71,7 @@
 @import '../../components/WorkoutSession/styles/WorkoutSession.scss';
 @import '../../components/CustomSwipeAction/styles/CustomSwipeAction.scss';
 @import '../../components/Timer/styles/Timer.scss';
+@import '../../components/RestingTimerEdit/styles/RestingTimerEdit.scss';
 
 @import '../../components/LiftMate/MuscleGroupCard/styles/MuscleGroupCard.scss';
 @import '../../pages/LiftMate/EditWorkout/styles/EditWorkout.scss';
