--- a/src/components/WorkoutSession/styles/WorkoutSession.scss
+++ b/src/components/WorkoutSession/styles/WorkoutSession.scss
@@ -13,6 +13,12 @@
   padding-top: 1rem;
   // padding-inline-start: 1rem;
 
+  .workout-name-container {
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+  }
+
   .actions-container {
     display: flex;
     align-items: center;
