--- a/src/assets/styles/basics/helpers.scss
+++ b/src/assets/styles/basics/helpers.scss
@@ -1394,6 +1394,10 @@ body.dark-mode {
   font-size: 1.2rem;
   font-weight: 600 !important;
   opacity: 0.7;
+
+  &.opacity-1 {
+    opacity: 1;
+  }
 }
 
 .MuiBadge-root {
