--- a/src/components/Timer/styles/Timer.scss
+++ b/src/components/Timer/styles/Timer.scss
@@ -1,8 +1,9 @@
 .timer-container {
   position: fixed;
-  bottom: 105px;
-  left: 0.5rem;
-  right: 0.5rem;
+  // bottom: 50px;
+  bottom: 60px;
+  // left: 0.5rem;
+  // right: 0.5rem;
   border-radius: 10px;
   height: 70px !important;
   background-color: $light-gray;
@@ -13,6 +14,7 @@
   grid-template-columns: auto 1fr;
   align-items: center;
   gap: 0rem 0.8rem;
+  text-align: start !important;
 
   h6 {
     justify-self: start;
@@ -23,7 +25,7 @@
     height: 50px;
     border-radius: 10px;
     object-fit: cover;
-    margin-left: 5px;
+    margin-left: 8px;
 
     grid-row: 1/3;
     align-self: center;
@@ -40,8 +42,8 @@
     align-self: end;
     height: fit-content;
     display: grid;
-    grid-template-columns: 1fr auto 1fr;
-    grid-template-columns: minmax(130px, 1fr) 1fr minmax(110px, 1fr);
+    grid-template-columns: minmax(130px, 1fr) auto minmax(110px, 1fr);
+    // grid-template-columns: minmax(130px, 1fr) 1fr minmax(110px, 1fr);
     gap: 0.5rem;
     margin: 0;
     padding-inline-end: 0.5rem;
@@ -50,6 +52,11 @@
     justify-items: start;
 
     .divider {
+      justify-self: center;
+    }
+
+    .time-left {
+      // justify-self: end;
       justify-self: center;
     }
   }
