Fix CustomList load more functionality

--- a/src/CustomMui/CustomList/styles/CustomList.scss
+++ b/src/CustomMui/CustomList/styles/CustomList.scss
@@ -85,6 +85,13 @@
       border-bottom: 2px solid $picker-color-pink;
     }
   }
+
+  .loading-more-items-container {
+    align-self: start;
+    .results {
+      height: fit-content;
+    }
+  }
 }
 
 .item-image {
