Add make sure to check both translatedText and safeTxt when querying items from backend

--- a/src/components/ItemSearch/styles/ItemSearch.scss
+++ b/src/components/ItemSearch/styles/ItemSearch.scss
@@ -79,7 +79,7 @@
 .item-search .results {
   overflow: auto;
   // touch-action: pan-y;
-  height: 520px;
+  // height: 520px;
 }
 
 .item-search .loading,
