Move item filter logic into it's onw cmp

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -72,6 +72,7 @@
 @import '../../components/CustomSwipeAction/styles/CustomSwipeAction.scss';
 @import '../../components/Timer/styles/Timer.scss';
 @import '../../components/RestingTimerEdit/styles/RestingTimerEdit.scss';
+@import '../../components/ItemFilter/styles/ItemFilter.scss';
 
 @import '../../components/LiftMate/MuscleGroupCard/styles/MuscleGroupCard.scss';
 @import '../../pages/LiftMate/EditWorkout/styles/EditWorkout.scss';
