Add merge meals and favorite list

--- a/src/components/ItemSearch/styles/ItemSearch.scss
+++ b/src/components/ItemSearch/styles/ItemSearch.scss
@@ -13,6 +13,10 @@
     // moved to CustomList styles
   }
 
+  .search-header {
+    padding: 0em 1rem;
+  }
+
   .no-results {
     padding: 0em 1rem;
     color: $dark-gray;
