Add several bold-header class around the app, organize cmps to a better structure

--- a/src/components/BmrCard/styles/BmrCard.scss
+++ b/src/components/BmrCard/styles/BmrCard.scss
@@ -2,7 +2,12 @@
   height: fit-content;
   display: grid;
   gap: 1rem;
+
   // grid-template-columns: repeat(2, 1fr);
+
+  p {
+    text-align: start;
+  }
 
   .bmr-form-container {
     display: grid;
