--- a/src/components/WorkoutDetails/styles/WorkoutDetails.scss
+++ b/src/components/WorkoutDetails/styles/WorkoutDetails.scss
@@ -2,7 +2,8 @@
   display: grid;
   gap: 1.5rem;
   padding: 1rem;
-  height: 100%;
+  // height: 100%;
+  align-items: start;
 
   .header-container {
     display: grid;
