--- a/src/pages/LiftMate/Workouts/styles/Workouts.scss
+++ b/src/pages/LiftMate/Workouts/styles/Workouts.scss
@@ -70,7 +70,7 @@
 
   .no-past-workouts-message {
     text-align: center;
-    margin: 1rem 0;
+    margin-bottom: 1rem;
     opacity: 0.7;
   }
 }
