--- a/src/components/ItemSearch/styles/ItemSearch.scss
+++ b/src/components/ItemSearch/styles/ItemSearch.scss
@@ -2,19 +2,18 @@
   display: grid;
   gap: 12px;
   align-items: start;
-  // min-height: calc(100vh - $header-margin);
 
   &.dark-mode {
     background-color: $darker-gray !important;
     color: $white !important;
   }
 
-  .search-item-container {
-    // moved to CustomList styles
-  }
-
   .search-header {
     padding: 0em 1rem;
+
+    &:nth-of-type(2) {
+      margin-top: 1rem;
+    }
   }
 
   .no-results {
