--- a/src/pages/MyTracker/Dashboard/styles/Dashboard.scss
+++ b/src/pages/MyTracker/Dashboard/styles/Dashboard.scss
@@ -3,7 +3,11 @@
   gap: 0.8rem;
   align-items: start;
   grid-template-rows: auto minmax(310px, 1fr) 1fr;
-
+  .no-session-container {
+    margin-top: 2rem;
+    display: grid;
+    gap: 1rem;
+  }
   .times-container {
     position: sticky;
     top: 0;
