Add minor css imporvments

--- a/src/CustomMui/CustomSelect/styles/CustomSelect.scss
+++ b/src/CustomMui/CustomSelect/styles/CustomSelect.scss
@@ -88,6 +88,7 @@
 .custom-select,
 .MuiInputBase-root,
 .picker-select {
+  text-align: center;
   &.primary {
     &.dark-mode {
       .MuiFormLabel-root {
