--- a/src/components/ExerciseCard/styles/ExerciseCard.scss
+++ b/src/components/ExerciseCard/styles/ExerciseCard.scss
@@ -5,6 +5,7 @@
   border-radius: 0.5rem;
   box-shadow: 0 0 0.5rem 0 rgba(0, 0, 0, 0.1);
   gap: 1rem;
+  text-align: start;
 
   &.dark-mode {
     color: $white;
