Add no workout animation to Dashboard

--- a/src/CustomMui/CustomSelect/styles/CustomSelect.scss
+++ b/src/CustomMui/CustomSelect/styles/CustomSelect.scss
@@ -88,7 +88,9 @@
 .custom-select,
 .MuiInputBase-root,
 .picker-select {
-  text-align: center;
+  &.picker-select {
+    text-align: center !important;
+  }
   &.primary {
     &.dark-mode {
       .MuiFormLabel-root {
