--- a/src/pages/MyTracker/Dashboard/styles/Dashboard.scss
+++ b/src/pages/MyTracker/Dashboard/styles/Dashboard.scss
@@ -4,9 +4,14 @@
   align-items: start;
   grid-template-rows: auto minmax(310px, 1fr) 1fr;
   .no-session-container {
-    margin-top: 2rem;
+    margin-top: 1rem;
     display: grid;
-    gap: 1rem;
+    gap: 0.5rem;
+    .animation-container {
+      width: 160px;
+      height: 160px;
+      justify-self: center;
+    }
   }
   .times-container {
     position: sticky;
