Add general UX improvments, add Snacks to Diary

--- a/src/CustomMui/CustomSelect/styles/CustomSelect.scss
+++ b/src/CustomMui/CustomSelect/styles/CustomSelect.scss
@@ -88,8 +88,8 @@
 .custom-select,
 .MuiInputBase-root,
 .picker-select {
+  text-align: center;
   &.picker-select {
-    text-align: center !important;
   }
   &.primary {
     &.dark-mode {
