--- a/src/components/EditGoal/styles/EditGoal.scss
+++ b/src/components/EditGoal/styles/EditGoal.scss
@@ -71,6 +71,10 @@
       }
     }
 
+    .macros-container {
+      display: grid;
+    }
+
     .macros {
       grid-row: 1/2;
       grid-column: 2/3;
@@ -92,6 +96,10 @@
     }
   }
 
+  .weight-buttons-container {
+    display: grid;
+    grid-auto-flow: column;
+  }
   .edit-header-container {
     display: grid;
 
