--- a/src/components/ItemFilter/styles/ItemFilter.scss
+++ b/src/components/ItemFilter/styles/ItemFilter.scss
@@ -13,10 +13,11 @@
     grid-template-columns: 1fr auto;
     gap: 1rem;
 
-    &.dark-mode {
-      background: $darker-gray;
+    .item-filter-select {
+      .MuiSelect-select {
+        text-align: start !important;
+      }
     }
-
     .input-container {
       grid-column: 1/-1;
     }
@@ -44,6 +45,60 @@
 
     svg {
       color: $white;
+    }
+  }
+
+  .search-container.dark-mode {
+    background: $darker-gray;
+
+    .custom-select {
+      .MuiFormLabel-root {
+        background-color: $darker-gray !important;
+      }
+
+      &.blue {
+        .MuiFormLabel-root {
+          background-color: $darker-gray-blue !important;
+        }
+      }
+
+      &.green {
+        .MuiFormLabel-root {
+          background-color: $darker-gray-green !important;
+        }
+      }
+
+      &.yellow {
+        .MuiFormLabel-root {
+          background-color: $darker-gray-yellow !important;
+        }
+      }
+
+      &.red {
+        .MuiFormLabel-root {
+          background-color: $darker-gray-red !important;
+        }
+      }
+      &.orange {
+        .MuiFormLabel-root {
+          background-color: $darker-gray-orange !important;
+        }
+      }
+      &.purple {
+        .MuiFormLabel-root {
+          background-color: $darker-gray-purple !important;
+        }
+      }
+      &.pink {
+        .MuiFormLabel-root {
+          background-color: $darker-gray-pink !important;
+        }
+      }
+      &.deep-purple {
+        .MuiFormLabel-root {
+          background-color: $darker-gray-deep-purple !important;
+        }
+      }
     }
   }
 }
