Add better ExerciseEditor open close UX

--- a/src/components/ExerciseCard/styles/ExerciseCard.scss
+++ b/src/components/ExerciseCard/styles/ExerciseCard.scss
@@ -6,7 +6,9 @@
   box-shadow: 0 0 0.5rem 0 rgba(0, 0, 0, 0.1);
   gap: 1rem;
   text-align: start;
-
+  transition: all 0.3s ease-in-out;
+  grid-template-rows: 1fr;
+  overflow: hidden;
   &.dark-mode {
     color: $white;
   }
@@ -30,7 +32,7 @@
       // display: grid;
       display: flex;
       flex-direction: column;
-      gap: 0.5rem;
+      // gap: 0.5rem;
       grid-template-columns: 1fr;
     }
   }
@@ -74,9 +76,9 @@
 
   .exercise-card-actions {
     display: flex;
-    gap: 0.5rem;
+    // gap: 0.5rem;
     justify-content: flex-end;
-    margin-top: 0.5rem;
+    // margin-top: 0.5rem;
   }
 
   &.dark-mode {
