--- a/src/components/ExerciseEditor/styles/ExerciseEditor.scss
+++ b/src/components/ExerciseEditor/styles/ExerciseEditor.scss
@@ -2,6 +2,13 @@
   display: grid;
   // gap: 1rem;
 
+  max-height: 1000px;
+  overflow: hidden !important;
+  transition: max-height 0.3s ease-in-out;
+  &.closed {
+    max-height: 0;
+  }
+
   .set-container {
     position: relative;
     width: 100%;
