Add vertical SwiperSlider support

--- a/src/components/ExerciseEditor/styles/ExerciseEditor.scss
+++ b/src/components/ExerciseEditor/styles/ExerciseEditor.scss
@@ -27,6 +27,7 @@
       .finished,
       .not-finished {
         border-radius: 50%;
+        color: $white !important;
       }
       .not-finished {
         background-color: $error-color;
