--- a/src/components/StatsCarousel/styles/StatsCarousel.scss
+++ b/src/components/StatsCarousel/styles/StatsCarousel.scss
@@ -2,22 +2,37 @@
 
 .swiper {
   width: 100%;
-  height: 100%;
 }
 
 .stats-carousel {
-  display: grid;
   padding-bottom: 25px !important;
-  height: fit-content;
+  &.vertical {
+    padding-bottom: 0px !important;
+    height: 360px;
+    max-height: 500px; // Prevent it from getting too tall
+  }
+}
 
-  // height: calc($card-height * 1.32);
+.stats-carousel {
+  // height: calc($card-height * 1.32); // Match skeleton height for consistency
+  // height: 360px;
+  // max-height: 500px; // Prevent it from getting too tall
 }
 
 .swiper-pagination {
   bottom: 0px !important;
 }
 
+.swiper-pagination-vertical {
+  // margin-top: 10px;
+  height: fit-content;
+}
+
 .swiper-slide {
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .swiper-slide img {
