--- a/src/pages/MyTracker/Diary/styles/Diary.scss
+++ b/src/pages/MyTracker/Diary/styles/Diary.scss
@@ -11,7 +11,21 @@
   }
 
   .macros-accordion-container {
-    margin-bottom: 1rem;
+    // margin-bottom: 1rem;
+    position: sticky;
+    top: 0;
+    z-index: 100;
+    padding: 10px 0;
+    background-color: $neutral-gray;
+    border-radius: 5px;
+  }
+
+  &.dark-mode {
+    .macros-accordion-container {
+      background-color: $dark-gray;
+      border-radius: 5px;
+      // border-bottom: 1px solid $dark-mode-border;
+    }
   }
 
   .meals-container {
