Add defualt PWA white background color

--- a/src/assets/styles/basics/base.scss
+++ b/src/assets/styles/basics/base.scss
@@ -30,6 +30,10 @@ body {
       background-color: transparent !important;
       z-index: -10;
     }
+
+    &:has(.pwa-install-container) {
+      background-color: $white !important;
+    }
   }
 
   &:has(.MuiDialog-root),
