Add basic ChangeExercise cmp

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -73,7 +73,7 @@
 @import '../../components/Timer/styles/Timer.scss';
 @import '../../components/RestingTimerEdit/styles/RestingTimerEdit.scss';
 @import '../../components/ItemFilter/styles/ItemFilter.scss';
-
+@import '../../components/ChangeExercise/styles/ChangeExercise.scss';
 @import '../../components/LiftMate/MuscleGroupCard/styles/MuscleGroupCard.scss';
 @import '../../pages/LiftMate/EditWorkout/styles/EditWorkout.scss';
 @import '../../pages/LiftMate/Workouts/styles/Workouts.scss';
