--- a/src/assets/styles/basics/helpers.scss
+++ b/src/assets/styles/basics/helpers.scss
@@ -1539,3 +1539,16 @@ body.dark-mode {
 .MuiAppBar-positionFixed {
   background-color: transparent !important;
 }
+
+.exercise-item-grid {
+  display: grid;
+  grid-template-columns: 50px 1fr auto;
+  gap: 1rem;
+
+  img {
+    width: 50px;
+    height: 50px;
+    object-fit: cover;
+    border-radius: 50%;
+  }
+}
