--- a/src/components/ExercisesSearch/styles/ExercisesSearch.scss
+++ b/src/components/ExercisesSearch/styles/ExercisesSearch.scss
@@ -16,6 +16,9 @@
     }
 
     .exercise-item {
+      display: grid;
+      grid-template-columns: 50px 1fr auto;
+      gap: 1rem;
       &:has(.added) {
         border-left: 2px solid $primary-color;
 
