--- a/src/assets/styles/basics/helpers.scss
+++ b/src/assets/styles/basics/helpers.scss
@@ -1544,6 +1544,7 @@ body.dark-mode {
   display: grid;
   grid-template-columns: 50px 1fr auto;
   gap: 1rem;
+  width: 100%;
 
   img {
     width: 50px;
