--- a/src/CustomMui/SignIn/styles/SignIn.scss
+++ b/src/CustomMui/SignIn/styles/SignIn.scss
@@ -1,9 +1,11 @@
 .login-sign-up-container {
   // margin-top: $header-margin;
   margin-top: 30px;
+  // min-height: fit-content;
   div {
-    max-height: calc(100vh - 79.32px - 174.59px);
-    min-height: fit-content;
+    // max-height: calc(100vh - 79.32px - 174.59px);
+
+    // min-height: fit-content;
     .MuiCard-root {
       margin: 1em 0px 0px 0px;
     }
