--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -95,6 +95,7 @@
 @import '../../pages/TrainerDashboard/components/Header/styles/Header.scss';
 @import '../../pages/TrainerDashboard/components/Content/styles/Content.scss';
 @import '../../pages/TrainerDashboard/components/Navigator/styles/Navigator.scss';
+@import '../../pages/TrainerDashboard/pages/Settings/styles/TrainerSettings.scss';
 
 @import '../../CustomMui/SignIn/styles/SignIn.scss';
 @import '../../CustomMui/BottomNavigation/styles/FixedBottomNavigation.scss';
