Add ExercisesSearch to TrainerDashboard

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -96,6 +96,7 @@
 @import '../../pages/TrainerDashboard/components/Content/styles/Content.scss';
 @import '../../pages/TrainerDashboard/components/Navigator/styles/Navigator.scss';
 @import '../../pages/TrainerDashboard/pages/Settings/styles/TrainerSettings.scss';
+@import '../../pages/TrainerDashboard/pages/Exercises/styles/TrainerExercises.scss';
 
 @import '../../CustomMui/SignIn/styles/SignIn.scss';
 @import '../../CustomMui/BottomNavigation/styles/FixedBottomNavigation.scss';
