--- a/src/assets/styles/setup/variables.scss
+++ b/src/assets/styles/setup/variables.scss
@@ -207,8 +207,12 @@ $black: #000;
 $header-height: 55px;
 $header-margin: 70px;
 
+$dashboard-header-height: 144px;
+
 $card-height: 240px;
 $circular-progress-size: 160px;
+
+$max-width: 1080px;
 
 // Macro colors (SCSS variables)
 $macro-protein: var(--macro-protein);
