--- a/src/components/ExercisesSearch/styles/ExercisesSearch.scss
+++ b/src/components/ExercisesSearch/styles/ExercisesSearch.scss
@@ -20,6 +20,26 @@
       display: grid;
       grid-template-columns: 50px 1fr auto;
       gap: 1rem;
+
+
+         .exercise-image {
+      width: 50px;
+      height: 50px;
+      object-fit: cover;
+      border-radius: 50%;
+    }
+      &.dashboard{
+
+        span{
+          font-size: 1rem;
+        }
+        grid-template-columns: 80px 1fr auto;
+        .exercise-image {
+          width: 80px;
+          height: 80px;
+
+        }
+      }
       &:has(.added) {
         border-left: 2px solid $primary-color;
 
@@ -50,12 +70,7 @@
       }
     }
 
-    .exercise-image {
-      width: 50px;
-      height: 50px;
-      object-fit: cover;
-      border-radius: 50%;
-    }
+ 
   }
 
   .selected-exercise-list {
