--- a/src/components/SlideDialog/styles/SlideDialog.scss
+++ b/src/components/SlideDialog/styles/SlideDialog.scss
@@ -1,5 +1,8 @@
 .MuiDialog-root.half-dialog {
   top: calc($header-margin + $card-height + 200px) !important;
+  &.dashboard {
+
+  }
 }
 
 .MuiDialog-root.full-dialog {
