Add better dashboard functionality and layout adjustments to SlideDialog, better ExerciseDetails styling dashboard mode

--- a/src/components/ExerciseDetails/styles/ExerciseDetails.scss
+++ b/src/components/ExerciseDetails/styles/ExerciseDetails.scss
@@ -4,7 +4,9 @@
   padding: 1rem 1rem 2rem 1rem;
 
   &.dashboard {
-    grid-template-columns: auto 1fr;
+    grid-template-columns: 300px 1fr;
+    padding: 2rem;
+    gap: 2rem 4rem;
 
     img{
       grid-column: 1/2;
