Add horizontal dnd to TraineesTabs

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -97,6 +97,7 @@
 @import '../../pages/TrainerDashboard/components/Navigator/styles/Navigator.scss';
 @import '../../pages/TrainerDashboard/pages/Settings/styles/TrainerSettings.scss';
 @import '../../pages/TrainerDashboard/pages/Exercises/styles/TrainerExercises.scss';
+@import '../../pages/TrainerDashboard/components/Header/styles/TraineesTabs.scss';
 
 @import '../../CustomMui/SignIn/styles/SignIn.scss';
 @import '../../CustomMui/BottomNavigation/styles/FixedBottomNavigation.scss';
