--- a/src/pages/TrainerDashboard/components/Header/styles/TraineesTabs.scss
+++ b/src/pages/TrainerDashboard/components/Header/styles/TraineesTabs.scss
@@ -4,13 +4,24 @@
     justify-content: center;
     padding: 0.5rem 1rem;
     font-size: 0.85rem;
-    opacity: 0.6;
     font-weight: 600;
     transition: all 0.3s ease;
+    background-color: transparent;
+    cursor: pointer;
+    
+    &.dark-mode {
+        opacity: 0.6;
 
+    }
 
-
-  &.dragging {
-    // opacity: 0.5;
+    &:hover {
+        opacity: 1;
+        background-color: rgba(255, 255, 255, 0.1);
+    }
+    
+    
+    &.dragging {
+        // opacity: 0.5;
+        background-color: rgba(255, 255, 255, 0.1);
   }
 }
