--- a/src/CustomMui/BottomNavigation/styles/FixedBottomNavigation.scss
+++ b/src/CustomMui/BottomNavigation/styles/FixedBottomNavigation.scss
@@ -202,3 +202,11 @@
   // justify-content: center;
   // z-index: 1000;
 }
+
+body.dark-mode {
+.MuiButtonBase-root:not(.css-1dcy7mk-MuiButtonBase-root-MuiListItemButton-root){
+  &:hover{
+    background-color: lighten($darker-gray, 10%);
+  }
+}
+}
